--- a/backend/public/analytics.html
+++ b/backend/public/analytics.html
@@ -116,7 +116,7 @@
     let project = null;
     let analyticsData = null;
     let suggestionData = null;
-    let selectedFilters = { device: [], browser: [], os: [], language: [] };
+    let selectedFilters = { device: [], browser: [], os: [], language: ['ja'] };
     let eventRows = [];
 
     async function loadProject() {
