--- a/backend/public/admin.html
+++ b/backend/public/admin.html
@@ -50,7 +50,7 @@
 						</div>
 
 						<div class="flex-shrink-0">
-							<div class="text-sm font-medium mb-2">SDK（セキュア版）</div>
+							<div class="text-sm font-medium mb-2">SDK</div>
 							<div class="bg-gray-50 p-3 rounded text-xs font-mono mb-2 max-w-md break-all">
 								&lt;script src="${window.location.origin}/tracker/${project._id}.js" charset="utf-8"&gt;&lt;/script&gt;
 							</div>
