--- a/backend/public/test_index.html
+++ b/backend/public/test_index.html
@@ -35,33 +35,13 @@
     </main>
   </div>
 
+  <script src="/js/auth.js"></script>
   <script>
     const API_URL = '/api';
     const projectId = new URLSearchParams(location.search).get('id');
     
     let project = null;
     let abtestsStats = new Map(); // ABテストIDをキーに統計情報を保存
-
-		// 認証付きfetchヘルパー関数
-		function authFetch(url, options = {}) {
-			const token = sessionStorage.getItem('token');
-			
-			if (!token) {
-				console.error('No token found, redirecting to login');
-				window.location.href = 'index.html';
-				return Promise.reject(new Error('No authentication token'));
-			}
-			
-			const headers = {
-				...options.headers,
-				'Authorization': `Bearer ${token}`
-			};
-			
-			return fetch(url, {
-				...options,
-				headers
-			});
-		}
 
     async function loadProject() {
       const res = await authFetch(`${API_URL}/projects`);
@@ -81,12 +61,6 @@
     async function loadABTestStats(abtestId) {
       try {
         const res = await authFetch(`${API_URL}/abtests/${abtestId}/stats`);
-				if (res.status === 401) {
-					alert('セッションが期限切れです。再度ログインしてください。');
-					sessionStorage.clear();
-					window.location.href = 'index.html';
-					return;
-				}
         const stats = await res.json();
         abtestsStats.set(abtestId, stats);
         return stats;
@@ -99,12 +73,6 @@
     async function loadABTests() {
       try {
         const res = await authFetch(`${API_URL}/abtests?projectId=${projectId}`);
-				if (res.status === 401) {
-					alert('セッションが期限切れです。再度ログインしてください。');
-					sessionStorage.clear();
-					window.location.href = 'index.html';
-					return;
-				}
         const abtests = await res.json();
         
         const list = document.getElementById('abtests-list');
@@ -233,24 +201,23 @@
       }
     });
 
-    // ログイン機能
-    if (sessionStorage.getItem('loggedIn') !== 'true') {
-      window.location.href = 'index.html';
-    }
+    // ログアウト処理
     document.getElementById('logout-btn').addEventListener('click', (e) => {
       e.preventDefault();
       if (confirm('ログアウトしますか？')) {
-        sessionStorage.clear();
-        window.location.href = 'index.html';
+        logout();
       }
     });
 
-    async function init() {
-      await loadProject();
-      await loadABTests();
-    }
-
-    init();
+    // ページ初期化
+    (async () => {
+      // 認証チェック
+      const authenticated = await requireAuth();
+      if (authenticated) {
+        loadProject();
+        loadABTests();
+      }
+    })();
   </script>
 </body>
 </html>
